# mipt-computer-graphics

./: CMakeLists.txt  README.md  install.ps1
common/: bmp_loader.cpp  bmp_loader.hpp  dds_loader.cpp  dds_loader.hpp  defer.hpp  exception.hpp  misc.cpp  misc.hpp  shader.cpp  shader.hpp  text.cpp  text.hpp
task1/: CMakeLists.txt  README.md
task1/tutorial01_first_window/: CMakeLists.txt  README.md
task1/tutorial02_red_triangle/: CMakeLists.txt  README.md
task1/tutorial03_matrices/: CMakeLists.txt  README.md  tutorial03.cpp
task1/tutorial04_colored_cube/: CMakeLists.txt  README.md  tutorial04.cpp
task2/: CMakeLists.txt  README.md  fragment_2.shader  main.cpp  vertex.shader
task3/: CMakeLists.txt  README.md  fragment_1.shader  main.cpp  vertex.shader
task4/: CMakeLists.txt  README.md  dodecahedron.hpp  fragment.shader  main.cpp  vertex.shader
task5/: CMakeLists.txt  README.md  main.cpp
task5/game/: dodecahedron.hpp  entity.cpp  entity.hpp  game.cpp  game.hpp  player.cpp  player.hpp
task5/glfw_wrapper/: session.cpp  session.hpp  window.cpp  window.hpp
task5/model/: instance_interface.hpp  instancing_model.cpp  instancing_model.hpp
task5/resources/dodecahedron/: vertex.shader
task5/resources/fireball/: fragment.shader  vertex.shader
task5/resources/font/: fragment.shader  vertex.shader
